[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1"]
[ext_resource type="AudioStream" path="res://assets/music/main-menu.mp3" id="2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")
autoplay = true

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0.65)

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -70.0
offset_right = 140.0
offset_bottom = 70.0

[node name="VBox" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = -12.0
alignment = 1
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MainPanel/VBox"]
layout_mode = 2
text = "XENOTHERIC"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="NewGameButton" type="Button" parent="MainPanel/VBox"]
layout_mode = 2
text = "New Game"
theme_override_font_sizes/font_size = 13

[node name="QuitButton" type="Button" parent="MainPanel/VBox"]
layout_mode = 2
text = "Quit"
theme_override_font_sizes/font_size = 13

[node name="ModePanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -90.0
offset_right = 160.0
offset_bottom = 90.0

[node name="VBox" type="VBoxContainer" parent="ModePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = -12.0
alignment = 1
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="ModePanel/VBox"]
layout_mode = 2
text = "Select Mode"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="StartButton" type="Button" parent="ModePanel/VBox"]
layout_mode = 2
text = "Start"
theme_override_font_sizes/font_size = 13

[node name="TestButton" type="Button" parent="ModePanel/VBox"]
layout_mode = 2
text = "Test"
theme_override_font_sizes/font_size = 13

[node name="BackButton" type="Button" parent="ModePanel/VBox"]
layout_mode = 2
text = "Back"
theme_override_font_sizes/font_size = 13
